# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2

  09 Dec 2006; Roy Marples <uberlord@gentoo.org>:

    Don't start USE services unless they are in the runlevel, #157589.

  09 Dec 2006; Mike Frysinger <vapier@gentoo.org>:

    Add a new TIMEZONE variable to /etc/conf.d/clock so we can track the
    timezone setting of /etc/localtime properly.

* baselayout-1.13.0_alpha8 (07 Dec 2006)

  07 Dec 2006; Roy Marples <uberlord@gentoo.org>:

    Replace checkroot bash regex with a sed regex so we're more robust, #157115.

    Install /etc/COPYRIGHT and /etc/protocols for BSD.

  06 Dec 2006; Roy Marples <uberlord@gentoo.org>:

    Warn about things stamping on /etc/resolv.conf a little better, #156840.

    Report /etc/init.d/$SVCNAME in syslog instead of rcscripts,
    #156138 thanks to Wolfram Schlich.

    Fix single on the kernel command line again, #154961.

    Turns out s-s-d using /proc/pid/exe doesn't work when the symlink has
    been moved elsewhere as the file has been deleted during an upgrade.
    /proc/pid/cmdline remains constant, so just check that instead.

    Fix do_unmount in localmount not to kill stuff when remounting ro
    if that would kill us too, fixes #156766.

    Fix dhcp client variables, as pointed out by John Major.

  05 Dec 2006; Roy Marples <uberlord@gentoo.org>:

    Obey the pppd noauth option, #104869 thanks to Bram Verweij.

  28 Nov 2006; Roy Marples <uberlord@gentoo.org>:

    Add a note about any system settings such as dns_domain_ stamping
    on reslov.conf and how to manage it properly, #156478.

    dhcpcd now works on FreeBSD :)

  14 Nov 2006; Roy Marples <uberlord@gentoo.org>:

    Don't mount /proc/bus/usb readonly, #103133 thanks to Niels Laukens.

    Added volumes init script (Linux only) to start your volumes.
    Using RC_NEED/USE/AFTER you can define when it starts,
    even before checkroot if you need it to.
